--- a/src/Components/MainPanel/MainPanel.css
+++ b/src/Components/MainPanel/MainPanel.css
@@ -1,7 +1,12 @@
 .main-panel {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  padding: 20px;
+  color: white;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 0;
+  height: 90%; /* Ensure it uses the full height of its parent */
+}
+
+#results {
   overflow-y: auto;
+  max-height: 60%;
 }
